tests/compile_fail/ktstr_test_threads_zero.stderr
error: threads must be > 0 (a topology with zero threads per core has zero CPUs — `total_cpus = llcs * cores * threads` — so the VM would boot with no addressable processors)
 --> tests/compile_fail/ktstr_test_threads_zero.rs:3:1
  |
3 | #[ktstr_test(threads = 0)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ktstr_test` (in Nightly builds, run with -Z macro-backtrace for more info)
